--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,8 @@
 # This is the main configuration file for the application.
 # ~~~~~
 
+java.source=1.6
+
 # Secret key
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
